common/ops/k8s/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bass-test
  labels:
    env: test
    app.kubernetes.io/part-of: bass
